opentelemetry/k8s/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
  labels:
    name: frontend
spec:
  rules:
  - host: order.local
    http:
      paths:
      - pathType: Prefix
        path: "/order"
        backend:
          service:
            name: order
            port: 
              number: 8080
